# InfoconSync

./: .gitignore  CLAUDE.md  README.md  implementation-plan.md  infocon-sync-requirements.md  pyproject.toml
docs/: architecture-decisions.md  infocon-librarian-implementation-plan.md  infocon-librarian-product-spec.md  installation.md  privacy-and-network.md  release-checklist.md  troubleshooting.md
scripts/: generate-test-torrents.py  package-macos.sh
src/infocon_librarian/: __main__.py  cli.py  config.py  drive_monitor.py  shutdown.py  structured_logging.py
src/infocon_librarian/archive/: inventory.py  root.py
src/infocon_librarian/domain/: errors.py  models.py  paths.py
src/infocon_librarian/remote/: client.py  discovery.py  fancyindex.py
src/infocon_librarian/services/: check_runner.py  check_service.py  http_transfer_runner.py  receipt_service.py  torrent_transfer_runner.py  verify_runner.py  verify_service.py
src/infocon_librarian/storage/: database.py  migrations.py  plan_repository.py  repositories.py
tests/e2e/: test_ui.py
tests/engine/: conftest.py  test_libtorrent_adapter.py  test_verify_service.py
tests/integration/: test_api_routes.py  test_cli.py  test_hardening.py  test_migrations.py  test_remote_client.py  test_web_security.py
tests/support/: fake_engine.py
tests/unit/: test_archive_root.py  test_check_service.py  test_fancyindex.py  test_http_downloader.py  test_inventory.py  test_metainfo.py  test_planner.py  test_preflight.py  test_receipt_service.py  test_safe_archive_path.py  test_transfer_manager.py
(+22 files in other folders)
