[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infocon-librarian"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "httpx>=0.27",
    "platformdirs>=4.0",
    # libtorrent is installed via brew (libtorrent-rasterbar) and accessed
    # through --system-site-packages in the venv. It is not on PyPI for 3.14.
]

[project.scripts]
infocon-librarian = "infocon_librarian.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "playwright>=1.44",
    "pytest-playwright>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
markers = [
    "engine: tests that use the real libtorrent engine (loopback only)",
    "e2e: Playwright browser tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "libtorrent"
ignore_missing_imports = true
